[apploader] Code cleanup